CMBSandbox4/src/objects/Login__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Logins</relationshipLabel>
        <relationshipName>Logins</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Confidential__c</fullName>
        <description>This is for confidential info that will only be visible to admis</description>
        <label>Confidential</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Logins</relationshipLabel>
        <relationshipName>Logins</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dynamic_Login__c</fullName>
        <formula>IF( Contains(Text(Type__c),&quot;Sandbox&quot;),HYPERLINK(&quot;https://test.salesforce.com/&quot; + &quot;?un=&quot; +  Username__c  +&quot;&amp;pw=&quot;+ Password__c,&quot;Dynamic Login&quot;),

HYPERLINK(&quot;https://login.salesforce.com/&quot; + &quot;?un=&quot; +  Username__c  +&quot;&amp;pw=&quot;+ Password__c,&quot;Dynamic Login&quot;)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dynamic Login</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Login_URL__c</fullName>
        <label>Login URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Salesforce_Intance__c</fullName>
        <inlineHelpText>na4, cs18</inlineHelpText>
        <label>Salesforce Instance</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Salesforce_Org_ID__c</fullName>
        <label>Salesforce Org ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Security_Token__c</fullName>
        <description>The security token currently associated with this login.</description>
        <inlineHelpText>The security token currently associated with this login.</inlineHelpText>
        <label>Security Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>App</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Salesforce MCA App Org</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Salesforce Portal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Salesforce Production</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Salesforce Sandbox</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Salesforce Dev Org</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vendor</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <label>Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Login</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Dynamic_Login__c</columns>
        <columns>Account__c</columns>
        <columns>Type__c</columns>
        <columns>Login_URL__c</columns>
        <columns>Username__c</columns>
        <columns>Password__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_ACS</fullName>
        <columns>NAME</columns>
        <columns>Dynamic_Login__c</columns>
        <columns>Type__c</columns>
        <columns>Login_URL__c</columns>
        <columns>Username__c</columns>
        <columns>Password__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account__c</field>
            <operation>contains</operation>
            <value>Attorneys,viate</value>
        </filters>
        <label>Client: ACS</label>
    </listViews>
    <listViews>
        <fullName>All_CloudMyBiz</fullName>
        <columns>NAME</columns>
        <columns>Dynamic_Login__c</columns>
        <columns>Type__c</columns>
        <columns>Login_URL__c</columns>
        <columns>Username__c</columns>
        <columns>Password__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account__c</field>
            <operation>contains</operation>
            <value>Cloudmybiz</value>
        </filters>
        <label>^CloudMyBiz</label>
    </listViews>
    <listViews>
        <fullName>All_ICF</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Dynamic_Login__c</columns>
        <columns>Login_URL__c</columns>
        <columns>Username__c</columns>
        <columns>Password__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account__c</field>
            <operation>contains</operation>
            <value>Infinity</value>
        </filters>
        <label>Client: ICF</label>
    </listViews>
    <listViews>
        <fullName>All_Jaco</fullName>
        <columns>NAME</columns>
        <columns>Dynamic_Login__c</columns>
        <columns>Type__c</columns>
        <columns>Login_URL__c</columns>
        <columns>Username__c</columns>
        <columns>Password__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account__c</field>
            <operation>contains</operation>
            <value>Jaco,eljet</value>
        </filters>
        <label>Client: Jaco</label>
    </listViews>
    <listViews>
        <fullName>All_Kandela</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Dynamic_Login__c</columns>
        <columns>Login_URL__c</columns>
        <columns>Username__c</columns>
        <columns>Password__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account__c</field>
            <operation>contains</operation>
            <value>Kandela</value>
        </filters>
        <label>Client: Kandela</label>
    </listViews>
    <listViews>
        <fullName>All_NBC</fullName>
        <columns>NAME</columns>
        <columns>Dynamic_Login__c</columns>
        <columns>Type__c</columns>
        <columns>Login_URL__c</columns>
        <columns>Username__c</columns>
        <columns>Password__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account__c</field>
            <operation>contains</operation>
            <value>National Business Capital</value>
        </filters>
        <label>Client: NBC</label>
    </listViews>
    <listViews>
        <fullName>All_Pearl</fullName>
        <columns>NAME</columns>
        <columns>Dynamic_Login__c</columns>
        <columns>Type__c</columns>
        <columns>Login_URL__c</columns>
        <columns>Username__c</columns>
        <columns>Password__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account__c</field>
            <operation>contains</operation>
            <value>pearl</value>
        </filters>
        <label>Client: Pearl</label>
    </listViews>
    <listViews>
        <fullName>All_The_Angell_Law_Firm</fullName>
        <columns>NAME</columns>
        <columns>Dynamic_Login__c</columns>
        <columns>Type__c</columns>
        <columns>Login_URL__c</columns>
        <columns>Username__c</columns>
        <columns>Password__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account__c</field>
            <operation>contains</operation>
            <value>Angell</value>
        </filters>
        <label>Client: The Angell Law Firm</label>
    </listViews>
    <listViews>
        <fullName>Client_BCC</fullName>
        <columns>NAME</columns>
        <columns>Dynamic_Login__c</columns>
        <columns>Type__c</columns>
        <columns>Login_URL__c</columns>
        <columns>Username__c</columns>
        <columns>Password__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account__c</field>
            <operation>contains</operation>
            <value>Business credit</value>
        </filters>
        <label>Client: BCC</label>
    </listViews>
    <listViews>
        <fullName>Client_Darien</fullName>
        <columns>NAME</columns>
        <columns>Dynamic_Login__c</columns>
        <columns>Type__c</columns>
        <columns>Login_URL__c</columns>
        <columns>Username__c</columns>
        <columns>Password__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account__c</field>
            <operation>contains</operation>
            <value>darien</value>
        </filters>
        <label>Client: Darien</label>
    </listViews>
    <listViews>
        <fullName>Client_Forward_Financing</fullName>
        <columns>NAME</columns>
        <columns>Dynamic_Login__c</columns>
        <columns>Type__c</columns>
        <columns>Login_URL__c</columns>
        <columns>Username__c</columns>
        <columns>Password__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account__c</field>
            <operation>contains</operation>
            <value>Forward</value>
        </filters>
        <label>Client: Forward Financing</label>
    </listViews>
    <listViews>
        <fullName>Client_Imperial</fullName>
        <columns>NAME</columns>
        <columns>Dynamic_Login__c</columns>
        <columns>Type__c</columns>
        <columns>Login_URL__c</columns>
        <columns>Username__c</columns>
        <columns>Password__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account__c</field>
            <operation>contains</operation>
            <value>Imperial</value>
        </filters>
        <label>Client: Imperial</label>
    </listViews>
    <listViews>
        <fullName>Client_Islands_Restaurants</fullName>
        <columns>NAME</columns>
        <columns>Dynamic_Login__c</columns>
        <columns>Type__c</columns>
        <columns>Login_URL__c</columns>
        <columns>Username__c</columns>
        <columns>Password__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account__c</field>
            <operation>contains</operation>
            <value>islands</value>
        </filters>
        <label>Client: Islands</label>
    </listViews>
    <listViews>
        <fullName>Client_Jacuzzi</fullName>
        <columns>NAME</columns>
        <columns>Dynamic_Login__c</columns>
        <columns>Type__c</columns>
        <columns>Login_URL__c</columns>
        <columns>Username__c</columns>
        <columns>Password__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account__c</field>
            <operation>contains</operation>
            <value>Jacuzzi</value>
        </filters>
        <label>Client: Jacuzzi</label>
    </listViews>
    <nameField>
        <label>Login Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Logins</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Need_either_Account_or_Contact</fullName>
        <active>true</active>
        <errorConditionFormula>AND (ISBLANK(Account__c  )  , ISBLANK(Contact__c  ))</errorConditionFormula>
        <errorMessage>Please enter either Account or Contact</errorMessage>
    </validationRules>
</CustomObject>